[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Entities/Boss/SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://src/Overlap/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Overlap/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Stats.gd" type="Script" id=4]
[ext_resource path="res://src/Entities/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Entities/Boss/Boss.gd" type="Script" id=6]
[ext_resource path="res://White_Color_Shader.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 28.0

[sub_resource type="CapsuleShape2D" id=4]
height = 22.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 12.0
height = 16.0

[sub_resource type="CircleShape2D" id=6]
radius = 128.0

[sub_resource type="CircleShape2D" id=7]
radius = 62.0

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
length = 0.375
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StompHitBox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.375 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StompHitBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.075, 0.150004, 0.225, 0.300007 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, -7 ), Vector2( 15, -5 ), Vector2( 22, -5 ), Vector2( 6, -5 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Boss" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 6 )
MAX_SPEED = 125

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -21 )
texture = ExtResource( 1 )
hframes = 7
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -21 )

[node name="CollisionPolygon2D" parent="HitBox" index="0"]
shape = SubResource( 3 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 32

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -23 )
shape = SubResource( 4 )

[node name="StompHitBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 8.05158, -6.02579 )
collision_mask = 16
knockback_vector = Vector2( 0, 2 )

[node name="CollisionPolygon2D" parent="StompHitBox" index="0"]
rotation = 0.490438
shape = SubResource( 5 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -21 )
shape = SubResource( 6 )

[node name="PlayerDetectionZone_Closer" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone_Closer" index="0"]
position = Vector2( 0, -21 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/float = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/stomp = SubResource( 10 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 11 )
anims/stop = SubResource( 12 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 4 )
max_health = 20

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HitBox"]
[editable path="HurtBox"]
[editable path="StompHitBox"]
[editable path="PlayerDetectionZone"]
[editable path="PlayerDetectionZone_Closer"]
